Chore : Removed the Single Cropping sankey chart

--- a/templates/block-report.html
+++ b/templates/block-report.html
@@ -816,12 +816,12 @@
             
             <!-- Three stacked Sankey charts below the map -->
             <div style="width: 100%; margin: 20px 0;">
-                <div style="margin-bottom: 30px;">
+                {% comment %} <div style="margin-bottom: 30px;">
                     <h4 style="text-align: center; margin-bottom: 10px;">Single Cropping Transitions</h4>
                     <div style="height: 300px; width: 100%;">
                         <canvas id="singleSankeyChart"></canvas>
                     </div>
-                </div>
+                </div> {% endcomment %}
                 
                 <div style="margin-bottom: 30px;">
                     <h4 style="text-align: center; margin-bottom: 10px;">Double Cropping Transitions</h4>
