Fix : Typo in report body

--- a/templates/block-report.html
+++ b/templates/block-report.html
@@ -795,7 +795,7 @@
 
         <section class="section" id="fishery-section">
             <h2>Fishery</h2>
-            <p>Up to <span id="fishery-area" class="number-class"></span>% area in tehsil appears to have good potential for fishery due to a reasonable amount of surface water retained throughout the year.</p>
+            <p>Up to <span id="fishery-area" class="number-class"></span>% area in tehsil appears to have good potential for fishery in tehsil due to a reasonable amount of surface water retained throughout the year.</p>
             
             <div class="map-chart-container">
                 <div id="fishingMap" class="map"></div>
