Revert "Features/mws report improvements (#516)"
This reverts commit 52256cc97afbd149a068d64f66afd139de75c247.

--- a/templates/mws-report.html
+++ b/templates/mws-report.html
@@ -1675,7 +1675,7 @@
             <p>{{drought_desc}}</p>
 
             <p>A Drought year is declared if the total number of weeks under severe intensity drought and moderate
-                intensity drought equal or exceeds 5, which means that the rainfall deficit was more than 25% for more than 5
+                intensity drought exceed 5, which means that the rainfall deficit was more than 25% for more than 5
                 weeks during the monsoon of that year.</p>
 
             <p>The occurrence of dry spell is defined across four consecutive weeks with each week of these
