chore : Commented agroforestry section

--- a/templates/block-report.html
+++ b/templates/block-report.html
@@ -805,7 +805,7 @@
             </div>
         </section>
 
-        <section class="section" id="agroforestry-section">
+        {% comment %} <section class="section" id="agroforestry-section">
             <h2>Agroforestry</h2>
             <p>Up to <span id="agroforestry-area" class="number-class"></span> hectares out of <span id="agroforestry-area-1" class="number-class"></span> hectares of cropping area in the tehsil could benefit from agroforestry since cropping intensity seems to be reducing in several areas.</p>
             
@@ -816,12 +816,12 @@
             
             <!-- Three stacked Sankey charts below the map -->
             <div style="width: 100%; margin: 20px 0;">
-                {% comment %} <div style="margin-bottom: 30px;">
+                 <div style="margin-bottom: 30px;">
                     <h4 style="text-align: center; margin-bottom: 10px;">Single Cropping Transitions</h4>
                     <div style="height: 300px; width: 100%;">
                         <canvas id="singleSankeyChart"></canvas>
                     </div>
-                </div> {% endcomment %}
+                </div> 
                 
                 <div style="margin-bottom: 30px;">
                     <h4 style="text-align: center; margin-bottom: 10px;">Double Cropping Transitions</h4>
@@ -837,7 +837,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> {% endcomment %}
     </div>
 
     <footer>
